# IrOps

./: CMakeLists.txt  README.md
.github/workflows/: main.yml  other.yml
checker/: CMakeLists.txt  checker.cpp
cmake/: Compiler.cmake  Configure.cmake
src/activations/: activations.cpp  activations.h
src/tensor/: CMakeLists.txt  Tensor.h
tests/: CMakeLists.txt  test.py  test_main.cpp
tests/Storage/: TestsStorage.cpp  TestsStorage.h
tests/TestBase/: TestBase.h
tests/TestClasses/: TestClass.cpp  TestClass.h
tests/TestsInstances/: testsInstances.cpp
tests/Utils/: Utils.cpp  Utils.h
tests_ref/: test.py
